@@ -3,7 +3,7 @@
 
 Name:           %{name}
 Version:        %{version}
-Release:        0%{?dist}
+Release:        1%{?dist}
 Summary:        Servicelog Database and Library
 Group:          System Environment/Libraries
 License:        LGPLv2
@@ -73,6 +73,9 @@ getent group service >/dev/null || /usr/sbin/groupadd service
 %{_libdir}/pkgconfig/servicelog-1.pc
 
 %changelog
+* Thu Aug 14 2014 Vasant Hegde <hegdevasant at linux.vnet.ibm.com> 1.1.15
+- Cleanup build tools (configure.ac and Makefile.am)
+
 * Tue Aug 20 2013 Vasant Hegde <hegdevasant at linux.vnet.ibm.com> 1.1.14
 - Include servicelog.db and bootstrap.sh file into compression file list
 
