@@ -1,3 +1,6 @@
+* Thu Aug 14 2014 Vasant Hegde <hegdevasant at linux.vnet.ibm.com> 1.1.15
+- Cleanup build tools (configure.ac and Makefile.am)
+
 * Tue Aug 20 2013 Vasant Hegde <hegdevasant at linux.vnet.ibm.com> 1.1.14
 - Include servicelog.db and bootstrap.sh file into compression file list
 
